--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
   <body>
     <div class="main-container">
       <header>
-        <img src="./image/Frame 7.svg" alt="logo" />
+        <a href="./index.html"><img src="./image/Frame 7.svg" alt="logo" /></a>
+
         <nav>
-          <div class="nav-title">Home</div>
-          <div class="nav-title">about</div>
-          <div class="nav-title">skills</div>
-          <div class="nav-title">portfolio</div>
-          <div class="nav-title">contact</div>
+          <a class="nav-title" href="index.html">Home</a>
+          <a class="nav-title" href="#about">about</a>
+          <a class="nav-title" href="#skills">skills</a>
+          <a class="nav-title" href="#works">portfolio</a>
+          <a class="nav-title" href="#contact">contact</a>
         </nav>
         <button class="header-btn">Hire Me</button>
       </header>
@@ -36,7 +37,7 @@
 
         <section class="meter">
           <div class="meter-block">
-            <img class="meter-logo" src="./image/Group 6.svg" alt="" />
+            <img class="meter-logo" src="./image/Group 6.svg" alt="logo" />
             <div>
               5+
               <div class="little-text">Years of Experience</div>
@@ -45,7 +46,7 @@
           </div>
 
           <div class="meter-block">
-            <img class="meter-logo" src="./image/Group 6 (1).svg" alt="" />
+            <img class="meter-logo" src="./image/Group 6 (1).svg" alt="logo" />
             <div>
               100+
               <div class="little-text">Completed Projects</div>
@@ -54,7 +55,7 @@
           </div>
 
           <div class="meter-block">
-            <img class="meter-logo" src="./image/Group 6 (2).svg" alt="" />
+            <img class="meter-logo" src="./image/Group 6 (2).svg" alt="logo" />
             <div>
               50+
               <div class="little-text">Happy Clients</div>
@@ -65,7 +66,7 @@
 
         <section class="hero">
           <img class="hero-img" src="./image/Group 12.png" alt="Hero" />
-          <div class="hero-info">
+          <div class="hero-info" id="about">
             <button class="who-btn dark-btn-style">Who I am</button>
             <div class="about-me title-style">About Me</div>
             <div class="subtitle-style">
@@ -82,7 +83,7 @@
           </div>
         </section>
 
-        <section class="scills">
+        <section class="scills" id="skills">
           <div class="scills-info">
             <button class="dark-btn-style">MY skills</button>
             <div class="title-style">What My Programming Skills Included?</div>
@@ -99,70 +100,78 @@
               <img
                 class="scills-img"
                 src="./image/vscode-icons_file-type-html.svg"
-                alt=""
+                alt="html"
               />
             </div>
             <div class="scills-box">
               <img
                 class="scills-img"
                 src="./image/vscode-icons_file-type-css.svg"
-                alt=""
+                alt="css"
               />
             </div>
             <div class="scills-box">
               <img
                 class="scills-img"
                 src="./image/logos_javascript.svg"
-                alt=""
+                alt="javascript"
               />
+            </div>
+            <div class="scills-box">
+              <img class="scills-img" src="./image/image 1.svg" alt="" />
             </div>
             <div class="scills-box">
               <img
                 class="scills-img"
                 src="./image/logos_bootstrap.svg"
-                alt=""
+                alt="bootstrap"
               />
             </div>
             <div class="scills-box">
-              <img class="scills-img" src="./image/Vector (1).svg" alt="" />
+              <img class="scills-img" src="./image/image 2.svg" alt="xd" />
             </div>
             <div class="scills-box">
-              <img class="scills-img" src="./image/image 2.svg" alt="" />
-            </div>
-            <div class="scills-box">
-              <img class="scills-img" src="./image/Vector (1).svg" alt="" />
+              <img class="scills-img" src="./image/Vector (1).svg" alt="sass" />
             </div>
             <div class="scills-box">
               <img
                 class="scills-img"
                 src="./image/logos_typescript-icon.svg"
-                alt=""
+                alt="typescript"
               />
             </div>
             <div class="scills-box">
-              <img class="scills-img" src="./image/logos_python.svg" alt="" />
+              <img
+                class="scills-img"
+                src="./image/logos_python.svg"
+                alt="python"
+              />
             </div>
             <div class="scills-box">
               <img
                 class="scills-img"
                 src="./image/bxl_tailwind-css.svg"
-                alt=""
+                alt="tailwind"
               />
             </div>
             <div class="scills-box">
-              <img class="scills-img" src="./image/logos_figma.svg" alt="" />
+              <img
+                class="scills-img"
+                src="./image/logos_figma.svg"
+                alt="figma"
+              />
             </div>
             <div class="scills-box">
               <img
                 class="scills-img"
                 src="./image/akar-icons_github-fill.svg"
-                alt=""
+                alt="github"
               />
             </div>
           </div>
         </section>
 
-        <section class="my-works">
+        <section class="my-works" id="works">
           <button class="dark-btn-style btn-my-works">my works</button>
           <div class="title-style featured-works">Featured Works</div>
           <div class="works-menu">
@@ -174,22 +183,31 @@
 
           <div class="cards">
             <div>
-              <img src="./image/Cover.png" alt="" /><img
+              <img src="./image/Cover.png" alt="previous work" /><img
+                class="little-img"
                 src="./image/Frame 36660.png"
-                alt=""
+                alt="previous work"
               />
             </div>
             <div>
-              <img src="./image/Frame 36661.png" alt="" /><img
+              <img
+                class="little-img"
+                src="./image/Frame 36661.png"
+                alt="previous work"
+              /><img
                 class="upper-card"
                 src="./image/wd2 1.png"
-                alt=""
+                alt="previous work"
               />
             </div>
             <div>
-              <img src="./image/wd3 2.png" alt="" />
+              <img src="./image/wd3 2.png" alt="previous work" />
 
-              <img src="./image/Homepage 1.png" alt="" />
+              <img
+                class="little-img"
+                src="./image/Homepage 1.png"
+                alt="previous work"
+              />
             </div>
           </div>
         </section>
@@ -214,7 +232,7 @@
               </div>
 
               <div class="feed-person">
-                <img src="./image/33.jpg" alt="" />
+                <img src="./image/33.jpg" alt="woman-photo" />
                 <div>
                   <div class="person-name">Khushi Gupta</div>
                   <div class="person-work">Designer</div>
@@ -237,7 +255,7 @@
               </div>
 
               <div class="feed-person">
-                <img src="./image/33.jpg" alt="" />
+                <img src="./image/33.jpg" alt="woman-photo" />
                 <div>
                   <div class="person-name">Khushi Gupta</div>
                   <div class="person-work">Designer</div>
@@ -260,7 +278,7 @@
               </div>
 
               <div class="feed-person">
-                <img src="./image/33.jpg" alt="" />
+                <img src="./image/33.jpg" alt="woman-photo" />
                 <div>
                   <div class="person-name">Khushi Gupta</div>
                   <div class="person-work">Designer</div>
@@ -282,22 +300,62 @@
         <div>
           <div class="footer-title">Useful Links</div>
           <ul class="footer-subtitle">
-            <li>Home</li>
-            <li>About</li>
-            <li>Skills</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li><a class="footer-link" href="index.html">Home</a></li>
+            <li><a class="footer-link" href="#about">About</a></li>
+            <li><a class="footer-link" href="#skills">Skills</a></li>
+            <li><a class="footer-link" href="#works">Portfolio</a></li>
+            <li><a class="footer-link" href="#contact">Contact</a></li>
           </ul>
         </div>
 
         <div>
           <div class="footer-title">Social Media</div>
-          <ul class="footer-subtitle">
-            <li>Instagram</li>
-            <li>linkedin</li>
-            <li>Dribbble</li>
-            <li>Behance</li>
-            <li>Github</li>
+          <ul class="footer-subtitle" id="contact">
+            <li>
+              <a
+                class="footer-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer-link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >linkedin</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer-link"
+                href="https://www.dribbble.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Dribbble</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer-link"
+                href="https://www.behance.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Behance</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer-link"
+                href="https://www.github.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Github</a
+              >
+            </li>
           </ul>
         </div>
 
